kubernetes/python-one.yaml
kind: Pod
apiVersion: v1
metadata:
  name: python-one
  labels:
    app: python-one
spec:
  containers:
    - name: python-one
      image: one:latest
      imagePullPolicy: Never # req'd for minikube dockerfile "hack"
---
kind: Service
apiVersion: v1
metadata:
  name: python-one-service
spec:
  selector:
    app: python-one
  ports:
    - port: 8000 # Default port for image
